ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/ctest_debug.log
+ cmake -DCMAKE_BUILD_TYPE=Debug -DGGML_METAL=ON ..
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.5 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value or use a ...<max> suffix to tell
  CMake that the project does not need compatibility with older versions.


-- The C compiler identification is AppleClang 14.0.3.14030022
-- The CXX compiler identification is AppleClang 14.0.3.14030022
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Git: /usr/bin/git (found version "2.39.2 (Apple Git-143)") 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- CMAKE_SYSTEM_PROCESSOR: arm64
-- ARM detected
-- Accelerate framework found
CMake Warning (dev) at src/CMakeLists.txt:400 (install):
  Target ggml has RESOURCE files but no RESOURCE DESTINATION.
This warning is for project developers.  Use -Wno-dev to suppress it.

-- ARM detected
-- Accelerate framework found
-- Configuring done (0.5s)
-- Generating done (0.1s)
-- Build files have been written to: /Users/ggml/work/ggml/build-ci-debug

real	0m0.614s
user	0m0.290s
sys	0m0.281s
+ make -j
[  0%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  1%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-metal.m.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
/Users/ggml/work/ggml/src/ggml-metal.m:2060:8: error: expected identifier or '('
extern "C" ggml_backend_t ggml_backend_reg_metal_init(const char * params, void * user_data) {
       ^
1 error generated.
make[2]: *** [src/CMakeFiles/ggml.dir/ggml-metal.m.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [src/CMakeFiles/ggml.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[  6%] Linking CXX static library libcommon.a
[  6%] Built target common
make: *** [all] Error 2
